# nabucco

./: .dockerignore  .env  .env_dev  .flake8  .gitignore  Dockerfile  README.md  create_fixtures.sh  default.env  dump_and_restore.sh  main.py  manage.py  nginx.default  pyproject.toml  pyvenv.cfg  requirements.txt  requirements_test.txt  set_env_variables.sh  start-server.sh  xml_to_csv.py
.github/workflows/: build.yml  lint.yml  test.yml
appcreator/: code_templates.py  creator.py  import_utils.py  populate_fields.py
archiv/: admin.py  api_views.py  apps.py  biblio.py  dal_urls.py  dal_views.py  filter_utils.py  filters.py  forms.py  models.py  serializers.py  tables.py  tests.py  urls.py  utils.py  views.py
archiv/fixtures/: dump.json
archiv/migrations/: 0001_initial.py  0002_auto_20210921_1846.py  0002_auto_20211110_1104.py  0003_auto_20210930_0949.py  0003_auto_20211112_1329.py  0004_auto_20211004_1018.py  0004_auto_20220112_1414.py  0005_auto_20211004_1018.py  0005_place_region.py  0006_auto_20211004_1113.py  0006_remove_place_region.py  (+49 more)
custom_user_app/: admin.py  models.py
digeanna/: apps.py  tests.py  urls.py  views.py
djangobaseproject/: settings.py  urls.py
infos/: admin.py  api_views.py  filters.py  forms.py  models.py  serializers.py  special_views.py  tables.py  urls.py  views.py
navico/: apps.py  tests.py  urls.py  views.py
news/: admin.py  models.py  tests.py  urls.py  views.py
nippur/: apps.py  urls.py  views.py
templates/: base.html
webpage/: metadata.py  tests.py  urls.py  utils.py  views.py  webpage_content_processors.py
(+110 files in other folders)
